--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 </head>
 
 <body>
-	<div id="resultat"></div>
-	<script src="./js/data.js" defer></script>
+	<!-- <div id="resultat"></div> -->
+	<div id="example-table"></div>
+	<script src="./js/app.js"></script>
 </body>
 
 </html>
