--- a/index.html
+++ b/index.html
@@ -1,13 +1,113 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="./js/data.js" defer></script>
+    <title>Tableau JSON</title>
+    <style>
+      table {
+        border-collapse: collapse;
+        width: 100%;
+      }
+      th,
+      td {
+        border: 1px solid #ddd;
+        padding: 8px;
+        text-align: left;
+      }
+      th {
+        background-color: #f2f2f2;
+      }
+    </style>
   </head>
   <body>
     <div id="resultat"></div>
+
+    <script>
+      // Fonction pour charger les données JSON à partir d'une URL
+      async function chargerJSON(url) {
+        const response = await fetch(url);
+        const data = await response.json();
+        return data;
+      }
+
+      // Charger les données du fichier JSON A
+      const urlJSONA = "./data/221410_A.json";
+      const donneesA = chargerJSON(urlJSONA);
+
+      // Charger les données du fichier JSON B
+      const urlJSONB = "./data/221410_B.json";
+      const donneesB = chargerJSON(urlJSONB);
+
+      // Utiliser les données récupérées
+      Promise.all([donneesA, donneesB])
+        .then(([dataA, dataB]) => {
+          // Effectuer les comparaisons et générer le nouveau JSON
+          const differences = [];
+
+          // Parcourir les objets du fichier JSON A
+          for (const objetA of dataA) {
+            const redshift = objetA["Redshift"];
+
+            // Rechercher l'objet correspondant dans le fichier JSON B
+            const objetB = dataB.find(
+              (objet) => objet["Redshift"] === redshift
+            );
+
+            if (objetB) {
+              const difference = {};
+
+              // Parcourir les propriétés de l'objetA
+              for (const key in objetA) {
+                if (objetB.hasOwnProperty(key)) {
+                  const valueA = objetA[key];
+                  const valueB = objetB[key];
+
+                  // Effectuer la comparaison et calculer la différence
+                  difference[key] = Math.abs(valueA - valueB) / valueB;
+                }
+              }
+
+              // Stocker la différence dans le tableau
+              differences.push(difference);
+            }
+          }
+
+          // Générer le tableau HTML
+          const table = document.createElement("table");
+          const thead = document.createElement("thead");
+          const tbody = document.createElement("tbody");
+
+          // Créer la ligne d'en-tête avec les titres des colonnes
+          const headRow = document.createElement("tr");
+          for (const key in differences[0]) {
+            const th = document.createElement("th");
+            th.textContent = key;
+            headRow.appendChild(th);
+          }
+          thead.appendChild(headRow);
+          table.appendChild(thead);
+
+          // Parcourir les différences et créer les lignes du corps du tableau
+          for (const difference of differences) {
+            const row = document.createElement("tr");
+            for (const key in difference) {
+              const cell = document.createElement("td");
+              cell.textContent = difference[key];
+              row.appendChild(cell);
+            }
+            tbody.appendChild(row);
+          }
+          table.appendChild(tbody);
+
+          // Ajouter le tableau à la div avec l'ID "resultat"
+          const resultatDiv = document.getElementById("resultat");
+          resultatDiv.appendChild(table);
+        })
+        .catch((error) => {
+          console.error(
+            "Une erreur s'est produite lors du chargement des données JSON :",
+            error
+          );
+        });
+    </script>
   </body>
 </html>
