--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <h1>Rank: </h1>
-  <table>
+  <table id="table">
     <thead>
       <tr>
         <th>Nom</th>
@@ -22,256 +22,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <!-- Nom -->
-        <td>ContinuumAmplitude</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>ContinuumAmplitudeUncertainty</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>ContinuumIgmIndex</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>ContinuumIsmCoeff</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>ContinuumName</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>LeastSquare</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>LinesRatioAmplitudeAbs</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>LinesRatioAmplitudeEm</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>LinesRatioIsmCoeff</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>LinesRatioName</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>Redshift</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>RedshiftLogProbaDensity</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>RedshiftProba</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>RedshiftProbaZmax</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>RedshiftProbaZmin</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>RedshiftUncertainty</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>StrongEmissionLinesSNR</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>SubType</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>VelocityAbsorption</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>VelocityEmission</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>abs_deltaZ</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>lfHa</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>lfOII</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>snrHa</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>snrOII</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
+      
     </tbody>
   </table>
   <script src="./js/data.js"></script>
