--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link href="https://unpkg.com/tabulator-tables/dist/css/tabulator.min.css" rel="stylesheet">
   <script type="text/javascript" src="https://unpkg.com/tabulator-tables/dist/js/tabulator.min.js"></script>
+  <script src="./js/data.js" defer></script>
 </head>
 
 <body>
@@ -22,258 +23,7 @@
         <th>Seuil</th>
       </tr>
     </thead>
-    <tbody>
-      <tr>
-        <!-- Nom -->
-        <td>ContinuumAmplitude</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>ContinuumAmplitudeUncertainty</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>ContinuumIgmIndex</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>ContinuumIsmCoeff</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>ContinuumName</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>LeastSquare</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>LinesRatioAmplitudeAbs</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>LinesRatioAmplitudeEm</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>LinesRatioIsmCoeff</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>LinesRatioName</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>Redshift</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>RedshiftLogProbaDensity</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>RedshiftProba</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>RedshiftProbaZmax</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>RedshiftProbaZmin</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>RedshiftUncertainty</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>StrongEmissionLinesSNR</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>SubType</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>VelocityAbsorption</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>VelocityEmission</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>abs_deltaZ</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>lfHa</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>lfOII</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>snrHa</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-      <tr>
-        <!-- Nom -->
-        <td>snrOII</td>
-        <!-- Data A -->
-        <td>Data A</td>
-        <!-- Data B -->
-        <td>Data B</td>
-        <!-- Seuil -->
-        <td>Seuil</td>
-      </tr>
-    </tbody>
+    <tbody></tbody>
   </table>
 </body>
 
