--- a/index.html
+++ b/index.html
@@ -2,30 +2,33 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link href="https://unpkg.com/tabulator-tables/dist/css/tabulator.min.css" rel="stylesheet">
-  <script type="text/javascript" src="https://unpkg.com/tabulator-tables/dist/js/tabulator.min.js"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<link rel="stylesheet" href="css/style.css">
+	<link href="https://unpkg.com/tabulator-tables/dist/css/tabulator.min.css" rel="stylesheet">
+	<script type="text/javascript" src="https://unpkg.com/tabulator-tables/dist/js/tabulator.min.js"></script>
 </head>
 
 <body>
-  <h1>Rank: </h1>
-  <table id="table">
-    <thead>
-      <tr>
-        <th>Nom</th>
-        <th>Data A</th>
-        <th>Data B</th>
-        <th>Seuil</th>
-      </tr>
-    </thead>
-    <tbody>
-      
-    </tbody>
-  </table>
-  <script src="./js/data.js"></script>
+	<label for="selector">Choose a rank/redshift:</label>
+
+	<select name="selector" id="selector">
+		<option value="">--Please choose an option--</option>
+	</select>
+	<table id="table">
+		<thead>
+			<tr>
+				<th>Nom</th>
+				<th>Data A</th>
+				<th>Data B</th>
+				<th>Seuil</th>
+			</tr>
+		</thead>
+		<tbody>
+		</tbody>
+	</table>
+	<script src="./js/data.js"></script>
 </body>
 
 </html>
