--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
   <link rel="stylesheet" href="css/style.css">
   <link href="https://unpkg.com/tabulator-tables/dist/css/tabulator.min.css" rel="stylesheet">
   <script type="text/javascript" src="https://unpkg.com/tabulator-tables/dist/js/tabulator.min.js"></script>
-  <script src="./js/data.js" defer></script>
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    crossorigin="anonymous"></script> -->
 </head>
 
 <body>
-	
   <h1>Rank: </h1>
-  <table>
+  <table id="table">
     <thead>
       <tr>
         <th>Nom</th>
@@ -25,6 +28,5 @@
     </thead>
     <tbody></tbody>
   </table>
+  <script src="./js/data.js"></script>
 </body>
-
-</html>
