la vie c'est ainsi

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<select name="selector" id="selector">
 		<option value="">--Please choose an option--</option>
 	</select>
+	<button id="removeNull">Hidden Null</button>
 	<table id="table">
 		<thead>
 			<tr>
