--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 		<option value="">--Please choose an option--</option>
 	</select>
 	<button id="removeNull">Hidden Null</button>
+	<label for="myTreshold">Treshold: </label>
+	<input id="myTreshold" type="range" min="1" max="100">
+	<div style="display: inline-block;" id="myValue"></div>
 	<table id="table">
 		<thead>
 			<tr>
