--- a/index.html
+++ b/index.html
@@ -1,18 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<link rel="stylesheet" href="css/style.css">
-	<link href="https://unpkg.com/tabulator-tables/dist/css/tabulator.min.css" rel="stylesheet">
-	<script type="text/javascript" src="https://unpkg.com/tabulator-tables/dist/js/tabulator.min.js"></script>
-</head>
+  <body>
+    <h1>Galaxy</h1>
+    <section class="galaxy">
+      <label for="selector">Choose a rank/redshift:</label>
 
-<body>
-	<div id="resultat"></div>
-	<script src="./js/data.js" defer></script>
-</body>
-
+      <select name="selector" id="selector">
+        <option value="">--Please choose an option--</option>
+      </select>
+      <button id="removeNull">Hidden Null</button>
+      <label id="treshold" for="myTreshold">Treshold: </label>
+      <input id="myTreshold" type="range" min="1" max="100" />
+      <div style="display: inline-block" id="myValue"></div>
+      <table id="table">
+        <thead>
+          <tr>
+            <th>Nom</th>
+            <th>Data A</th>
+            <th>Data B</th>
+            <th>Seuil</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+      <script src="./js/data.js"></script>
+    </section>
+  </body>
 </html>
